client/src/components/Upload/Upload.css
.upload {
  display: flex;
  border-radius: 15px;
  height: 100%;
  width: 25%;
  background-color: white;
  flex-direction: column;
  align-items: center;
  margin: auto;
  margin-top: 15px;
}

.upload * {
  background-color: white;
}

.upload-form {
  align-items: center;
  padding-bottom: 30px;
}

.upload img {
  width: 300px;
  height: 300px;
  object-fit: cover;
  padding-top: 30px;
}

.upload-img-preview p {
  padding-top: 30px;
  font-size: 30px;
}

.upload-form p {
  padding-top: 50px;
  padding-bottom: 15px;
  text-align: center;
  font-size: 24px;
}

.upload-form__btn {
  width: 100%;
  height: 30px;
  border-radius: 5px;
  background-color: #568ea3;
  color: #191414;
  font-weight: 600;
  font-size: 18px;
  border: none;
}

.cancel-form__btn {
  width: 100%;
  height: 30px;
  border-radius: 5px;
  background-color: #568ea3;
  color: #191414;
  font-weight: 600;
  font-size: 18px;
  border: none;
}

.upload-form__btn:hover,
.cancel-form__btn:hover {
  cursor: pointer;
  filter: brightness(130%);
}

.upload-form__btn-div {
  padding-top: 30px;
  padding-bottom: 15px;
}

.upload-form__caption {
  display: flex;
  flex-direction: column;
  padding: 30px 0;
}

.upload-form__caption label {
  padding: 15px 0;
  font-size: 24px;
}

.upload-form__caption input {
  height: 100px;
  border-radius: 5px;
  border: lightgrey 2px solid;
  font-size: 16px;
  background-color: white;
  text-align: top;
}

.upload-form__caption input:focus {
  outline: none;
}

